[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/TestingIdeas/Main.gd" type="Script" id=1]
[ext_resource path="res://src/Modules/Grid/World/GridWorld.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Modules/Camera/CameraTarget.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/TestingIdeas/Fog.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Modules/Camera/CameraController.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/TestingIdeas/GUI.tscn" type="PackedScene" id=7]

[node name="Main" type="Node2D" groups=[
"save",
]]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="GridWorld" parent="." instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 90.0176, 140.164 )

[node name="CameraTarget" parent="Player" instance=ExtResource( 4 )]

[node name="CameraController" parent="." instance=ExtResource( 6 )]
position = Vector2( 148.332, 88.4001 )
zoom = Vector2( 0.5, 0.5 )
drag_margin_left = 0.02
drag_margin_top = 0.02
drag_margin_right = 0.02
drag_margin_bottom = 0.02

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 0.001

[node name="Fog" parent="." instance=ExtResource( 5 )]
position = Vector2( 651.402, 312.353 )

[node name="GUI" parent="." instance=ExtResource( 7 )]
[connection signal="timeout" from="TurnTimer" to="." method="_on_TurnTimer_timeout"]
